--- a/src/pages/gamersPage/gamerspage.css
+++ b/src/pages/gamersPage/gamerspage.css
@@ -91,6 +91,7 @@
     font-weight:200;
     letter-spacing: 1px;
     text-shadow: 1px 1px 4px #202020;
+    margin-bottom: .25rem;
 }
 
 .shared__decks--page .popup,
