--- a/src/components/deck/Deck.css
+++ b/src/components/deck/Deck.css
@@ -7,10 +7,13 @@
     border-radius: 8px;
     height: 24vh;
     margin-bottom: 3vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .deck__body .icon{
-    width: 7vh;
+    width: 5.4vh;
     height: 80%;
 }
 
@@ -21,7 +24,8 @@
     padding: .5rem .75rem;
     border-radius: 0 0 7px 7px;
     color: white;
-    height: 40%;
+    height: 32%;
+    opacity: .9;
 }
 
 .deck__name{
