[page deck] counter feature finish

--- a/src/components/list/style.css
+++ b/src/components/list/style.css
@@ -1,7 +1,7 @@
 .list{
     display: flex;
     flex-wrap:wrap;
-    justify-content: space-around;
+    justify-content: flex-start;
     width: 90%;
     height: calc(83vh - var(--navbar-height) - var(--header-height) - 6.5vh);
     padding: .5rem 0 0 0;
@@ -11,6 +11,7 @@
 
 .list .list__item{
     width:30%;
-    margin-bottom: 1rem;
     cursor: pointer;
+    margin-bottom: 1rem;
+    margin-right: 3%;
 }
