--- a/src/components/deck/Deck.css
+++ b/src/components/deck/Deck.css
@@ -8,7 +8,7 @@
     border-radius: 8px;
     height: 24vh;
     margin-bottom: 3vh;
-    background-position: center;
+    background-position: center 39%;
     background-repeat: no-repeat;
     background-size: cover;
 }
