--- a/src/pages/deckPage/deckPage.css
+++ b/src/pages/deckPage/deckPage.css
@@ -9,6 +9,7 @@
     padding: 2vh 0;
     display: flex;
     justify-content: center;
+    width:90%;
 }
 
 .page__deck .deck__infos{
@@ -19,7 +20,7 @@
 
 .page__deck .list{
     width:auto;
-    padding: .5rem 1rem;
+    padding: .5rem 0;
 }
 
 .page__deck .list .list__item {
@@ -102,27 +103,67 @@
     pointer-events: none;
 }
 
-.page__deck .list__item:not(:last-child){
-    margin-bottom: 2.25vh;
-}
+/* .page__deck .list__item:not(:last-child){
+    margin-bottom: 2vh
+} */
 
 .page__deck .sub__list{
     display: flex;
     justify-content: space-between;
-    width:100%;
+    width: 100%;
     margin-bottom: 2.25vh;
 }
 
 .page__deck .sub__list--item{
-    width: 48%;
+    width: 46%;
     margin-bottom: 0;
+}
+
+.page__deck .sub__list--item .inner__list,
+.page__deck .list__item .inner__list{
+    padding: 5vw 0 0;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+
+.page__deck .sub__list--item .inner__list .inner__list--item,
+.page__deck .list__item .inner__list .inner__list--item{
+    margin: 0 0 4vw 0;
+    width: 46%;
+}
+
+.page__deck .list__item .inner__list .inner__list--item.divinity,
+.page__deck .sub__list--item .inner__list .inner__list--item.special,
+.page__deck .list__item .inner__list .inner__list--item.special{
+    width:100%;
+}
+
+.page__deck .sub__list--item .inner__list .inner__list--item img,
+.page__deck .list__item .inner__list .inner__list--item img{
+    width: 100%;
+    border-radius: 4px;
+    max-width: 240px;
+    margin-bottom: .5rem;
+    cursor:default;
+}
+
+.page__deck .list__item .inner__list .inner__list--item.divinity img{
+    max-width: 400px;
+}
+
+.page__deck .sub__list--item .inner__list .inner__list--item.special img{
+    max-width: 240px;
 }
 
 .page__deck .list__item,
 .page__deck .sub__list--item{
     display: flex;
     justify-content: space-between;
-    cursor:pointer;
+    align-content: flex-start;
+    flex-wrap: wrap;
 }
 
 .page__deck .list__item .list__item--text,
@@ -172,6 +213,10 @@
     width: 80%;
 }
 
+.page__deck .list .list__item{
+    margin-right:0;
+}
+
 .page__deck .popup__group,
 .page__deck .popup__title,
 .page__deck .input__file--label,
@@ -196,3 +241,24 @@
     margin-top: 6vh; 
 }
 
+.page__deck .counter__box{
+    display: flex;
+    align-items:center;
+    justify-content: space-between;
+    margin:0 auto;
+    font-size:5vw;
+    max-width: 240px;
+    cursor: default;
+}
+
+.page__deck .counter__box > *{
+    cursor: pointer;
+}
+
+.page__deck .counter__box .counter__box--close{
+    font-size: 6.5vw;
+}
+
+.page__deck .counter__box .counter__box--close{
+    color:#b90101;
+}
